# plumber

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
src/: app.rs  handler.rs  lib.rs  main.rs  message.rs  tui.rs  ui.rs
