[package]
name = "plumber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }


# rustc-demangle = "0.1.16"
# tui = "0.8"
# termion = "1.5"
# tokio = { version = "0.2.0", features = ["rt-threaded", "io-std", "io-util", "time", "signal", "sync", "stream"] }
# futures-util = "0.3.0"
# structopt = "0.3"
